--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <p>Get the most popular skin care products you can imagine</p>
 
       <div class="product-container">
-        <div class="product" onclick="window.location.href='sproduct.html'">
+        <div class="product" onclick="href='sproduct.html'">
           <img src="images/products/p1.jpg" alt="first-product" />
           <div class="description">
             <span>The ordinary</span>
